--- a/package.json
+++ b/package.json
@@ -2,20 +2,53 @@
   "name": "pdfer",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "eject": "react-scripts eject",
+    "test": "react-scripts test",
+    "test:ci": "react-scripts test --watchAll=false --coverage",
+    "lint": "npm run stylelint && npm run eslint && npm run prettier:check",
+    "lint:fix": "npm run stylelint:fix && npm run eslint:fix && npm run prettier:fix",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx src/ --color",
+    "eslint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --color --fix",
+    "stylelint": "stylelint src/**/*.scss",
+    "stylelint:fix": "stylelint src/**/*.scss --fix",
+    "precommit": "lint-staged",
+    "prettier:check": "prettier --check src/**/*.{js,jsx,json,ts,tsx}",
+    "prettier:fix": "prettier --write src/**/*.{js,jsx,json,ts,tsx}",
+    "husky:init": "husky install && husky add .husky\\pre-commit \"npm run precommit\""
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
+    "jsx-runtime": "^1.2.0",
+    "lint-staged": "^12.1.2",
+    "normalize.css": "^8.0.1",
+    "postcss-scss": "^4.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.180",
+    "@types/material-ui": "^0.21.12",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.41",
+    "@types/react-cropper": "^1.3.1",
+    "@types/react-dom": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^26.1.3",
+    "husky": "^7.0.4",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.5.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^24.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -33,6 +66,33 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "functions": 80,
+        "lines": 80,
+        "statements": 80,
+        "branches": 80
+      }
+    },
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!**/__mocks__/**",
+      "!**/__tests__/**",
+      "!**/__snapshots__/**",
+      "!**/constants/**",
+      "!src/index.jsx"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "src/**/*.scss": [
+      "stylelint --fix"
     ]
   }
 }
