--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,9 +14,7 @@
       "node": {
         "extensions": [
           ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
+          ".jsx"
         ]
       }
     }
@@ -31,14 +29,12 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
     "plugin:import/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:testing-library/react"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -142,7 +138,6 @@
         "**/*"
       ],
       "rules": {
-        "@typescript-eslint/no-empty-function": "off",
         "react/react-in-jsx-scope": 0,
         "react/jsx-uses-react": 0
       }
