--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,11 @@
 {
   "customSyntax": "postcss-scss",
-  "extends": ["stylelint-config-standard"],
-  "ignoreFiles": ["public/**/*"],
+  "extends": [
+    "stylelint-config-standard"
+  ],
+  "ignoreFiles": [
+    "public/**/*"
+  ],
   "rules": {
     "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
     "keyframes-name-pattern": "^[a-z][a-zA-Z0-9]+$"
