--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.5",
     "classnames": "^2.3.1",
+    "draftjs-to-html": "^0.9.1",
     "jsx-runtime": "^1.2.0",
     "lint-staged": "^12.1.2",
     "normalize.css": "^8.0.1",
     "postcss-scss": "^4.0.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
