--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
     "classnames": "^2.3.1",
+    "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "jspdf": "^2.5.1",
     "jsx-runtime": "^1.2.0",
+    "letterizejs": "^2.0.1",
     "lint-staged": "^12.1.2",
     "normalize.css": "^8.0.1",
     "postcss-scss": "^4.0.3",
     "react": "^17.0.0",
+    "react-animejs": "^0.5.6",
     "react-dom": "^17.0.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
