--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "node-sass": "^6.0.1",
     "prettier": "^2.5.0",
     "stylelint": "^14.1.0",
-    "stylelint-config-standard": "^24.0.0"
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^2.0.1",
+    "stylelint-order": "^5.0.0"
   },
   "eslintConfig": {
     "extends": [
