--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -37,7 +37,15 @@
         "background",
         "background-color",
         "padding",
+        "padding-top",
+        "padding-right",
+        "padding-bottom",
+        "padding-left",
         "margin",
+        "margin-top",
+        "margin-right",
+        "margin-bottom",
+        "margin-left",
         "font",
         "font-family",
         "font-size",
