--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-to-print": "^2.14.6",
+    "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
